--- a/docs/style.css
+++ b/docs/style.css
@@ -13,6 +13,15 @@ h1 {
   justify-content: center;
 }
 
+#webcams:hover, #webcams *:hover {
+  animation: none !important;
+}
+
+.webcam iframe:hover {
+  animation: none !important;
+}
+
+
 .webcam {
   border: 1px solid #ccc;
   padding: 20px;
@@ -43,7 +52,7 @@ body::-webkit-scrollbar-thumb {
 .button-container {
   display: flex;
   justify-content: center;
-  gap: 30px; /* This will add space between the buttons */
+  gap: 30px; 
   margin-top: 20px;
   z-index: 1000;
 }
@@ -66,7 +75,6 @@ button:hover {
   background-color: #005bb5;
 }
 
-/* Animation styles */
 .fade-in {
     opacity: 0;
     transition: opacity 0.5s;
@@ -76,7 +84,7 @@ button:hover {
     opacity: 1;
 }
 
-.webcam:hover, #dogImageContainer img:hover, button:hover, header h1:hover {
+#dogImageContainer img:hover, button:hover, header h1:hover {
     cursor: url('/doggoicon.png'), auto;
     animation: shake 0.5s;  
     animation-iteration-count: infinite;
