--- a/docs/style.css
+++ b/docs/style.css
@@ -112,3 +112,8 @@ button:hover {
   90% { transform: translate(1px, 2px) rotate(0deg); }
   100% { transform: translate(1px, -2px) rotate(-1deg); }
 }
+
+#dateTime,
+#ipAddress {
+    margin-bottom: 10px;
+}
